Fix overflow :)

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,13 +1,38 @@
+/*-----------------------*/
+/*    GLOBAL VARIABLES */
+/*---------------------*/
+
+$GoogleFontsURL: 'https: fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap';
+$RobotoFont: 'Roboto', sans-serif;
+
+/*----------------*/
+/*     Colours    */
+/*----------------*/
+
+$White: #f8f9fb;
+$Black: #3c383e;
+$Blue: #0187db;
+$Purple-1: #5c28cf;
+$Purple-1-rgba: rgba(79, 80, 255, 0.35);
+$Purple-2: #5738d1;
+$Purple-3: #4f50ff;
+$Orange-1: #ff735c;
+$Orange-2: #ff9558;
+$TextMuted: #777;
+
+@import url($GoogleFontsURL);
+
 html,
 body {
   margin: 0;
   font-family: 'Raleway', sans-serif;
   box-sizing: border-box;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
+
 main {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
